--- a/config.toml
+++ b/config.toml
@@ -13,10 +13,12 @@ highlight_code = true
 # Whether to build a search index to be used later on by a JavaScript library
 build_search_index = true
 
-theme="book"
+theme="tinydocs"
 
 [extra]
 # Put all your custom variables here
 blog = "https://blog.cronbox.ru"
 panel = "https://cp.cronbox.ru"
 docs = "https://docs.cronbox.ru"
+
+documentation_for = "Cronbox"
