--- a/config.toml
+++ b/config.toml
@@ -19,7 +19,7 @@ build_search_index = true
 theme="tinydocs"
 
 [extra]
-keywords = "Документация, Cronbox"
+keywords = "Документация, мониторинг для разработчиков, мониторинг"
 
 # Put all your custom variables here
 blog = "https://blog.cronbox.ru"
